Added image and few more elements

--- a/test.html
+++ b/test.html
@@ -1,3 +1,13 @@
-<h1> Hey. Big heading. </h1>
-<p>This is a paragraph.</p>
-<a href="https://google.com" target="blank" title="Let's go to Google.">Click me as I am a link.</a>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Test page</title>
+</head>
+<body>
+    <h1> Hey. Big heading. </h1>
+    <p>This is a <b>paragraph</b>.</p>
+    <a href="https://google.com" target="blank" title="Let's go to Google.">Click me as I am a link.</a>
+    <p>My name is: <br> Bit Bit.</p>
+    <img src="img/CLC.png">
+</body>
+</html>
