Removed "big" from heading.

--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <title>Test page</title>
 </head>
 <body>
-    <h1> Hey. Big heading. </h1>
+    <h1> Hey. Biggest heading. </h1>
     <p>This is a <b>paragraph</b>.</p>
     <a href="https://google.com" target="blank" title="Let's go to Google.">Click me as I am a link.</a>
     <p>My name is: <br> Bit Bit.</p>
