Wrote CSS for website.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <HTML>
 <HEAD>
     <TITLE>Yzma + Kronk</TITLE>
+    <link rel="icon" href="img/yzmaandkronk.png">
+    <link rel="stylesheet" type="text/css" href="css/hero.css">
+    <link href="https://fonts.googleapis.com/css2?family=Reggae+One&display=swap" rel="stylesheet">"
 </HEAD>
 <body>
     <!--header element-->
@@ -15,12 +18,12 @@
         <h2>About Yzma and Kronk</h2>
         <p>Kronk starts as Yzma's loyal assistant, regardless of her constant abuse, helping her where she's too old or unwilling to do things herself. </p>
         <img src="img/yzmakronk2.png">
-        <p> Kronk giving Yzma a ride.</p>
+        <p class="caption"> Kronk giving Yzma a ride.</p>
 
         <!--Characteristics-->
         <h2>Yzma and Kronk's Characteristics</h2>
         <ol>
-            <li>Yzma would like a quickc up of coffee.</li>
+            <li>Yzma would like a quick cup of coffee.</li>
             <li> Kronk makes good spinach puffs.</li>
             <li> Kronk has a great singing voice.</li>
         </ol>
@@ -29,7 +32,7 @@
         <h2> Yzma and Kronk's Crimes</h2>
         <p> Yzma and Kronk poisoned Kuzco with the intention of murdering Kuzco.Click on the links below to learn more.</p>
         <ul>
-            <li><a href="https://disney.fandom.com/wiki/Yzma"> </a> Yzma Wiki</li>
+            <li><a href="https://disney.fandom.com/wiki/Yzma"> Yzma Wiki </a></li>
             <li><a href="https://disney.fandom.com/wiki/Kronk"> Kronk Wiki</a></li>
         </ul>
     </main>
