testing CSS comments

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <TITLE>Yzma + Kronk</TITLE>
     <link rel="icon" href="img/yzmaandkronk.png">
     <link rel="stylesheet" type="text/css" href="css/hero.css">
-    <link href="https://fonts.googleapis.com/css2?family=Reggae+One&display=swap" rel="stylesheet">"
+    <link href="https://fonts.googleapis.com/css2?family=Reggae+One&display=swap" rel="stylesheet">
 </HEAD>
 <body>
     <!--header element-->
